fix the statistic and add quantity for listItem